[metadata]
name = ucla-cs118-connector
version = 0.0.1
description = Network controller to connect to the UCLA CS 118 router project
license = GPL3+
classifiers =
  License :: OSI Approved :: GNU General Public License (GPL)
  Programming Language :: Python
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Topic :: Internet

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  zeroc_ice